Reducing dunit heap size to 1.5g
To allow running dunits on laptops comfortably, reduce the heap size to 1.5GB which
is also enough for dunit.

Also reduce transient memory used a bit. Full support for off-heap buffers will come with SNAP-1454.